2014-10-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* paths.c, regions.c: Minor cleanup to avoid compiler warnings.

2014-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t1funcs.c: Bugfix (undefined operation due to a typo).
	* token.c: Fix ambigous behavior (sequence point).

	* encoding.c, objects.c: Avoid undefined behaviour when char is
	signed.

	* arith.c: Fix formats: %dl => %d for int.
	* paths.c, regions.c, spaces.c: Fix (debug) format specifiers:
	    %f for double* => double
	    %ld => %d for int
	    %p => %d for int
	    %x => %d for int (except for flags)
	    %x => %p for ANY*
	    %z => %p for ANY*

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* encoding.c, filenames.c, fontfcn.c, mag.c, pfb2pfa.c, pkout.c,
	ps2pk.c, scanfont.c: Include Autoconf generated headers first.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Remove TL vs W32TeX diffs (from Akira).
	* pkout.c: Add casts to avoid MSVC warnings.

2012-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce TL vs W32TeX diffs (from Akira).
	* mag.c [WIN32]: Add '#include <fcntl.h>' for setmode().
	* t1funcs.c: Add casts to avoid MSVC warnings.

2012-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pfb2pfa.c (main): Drop unnecessary nested fatal() prototype.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pkout.c (pk_runlengths): Pretend that the first pixel of an
	empty glyph is white; avoid using uninitialized data.
	Found by Martin Schroeder <martin@oneiros.de>.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ps2pk.c: Invoke kpse_set_program_name() with original argv[0]
	and program name string.
	* mag.c, ps2pk.c: ANSI C function declarations and definitions.
	No nested function declarations. Declare functions as static.